--- a/annomatic-benchmark/.gitignore
+++ b/annomatic-benchmark/.gitignore
@@ -1,3 +1,4 @@
+### Python template
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -7,6 +8,7 @@ __pycache__/
 *.so
 **/data/*.csv
 /agreement_analysis/*
+
 # Distribution / packaging
 .Python
 build/
@@ -159,3 +161,4 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
