--- a/annomatic-sentence-pool/requirements.txt
+++ b/annomatic-sentence-pool/requirements.txt
@@ -1,12 +1,14 @@
-beautifulsoup4==4.12.2
+beautifulsoup4==4.12.3
 langdetect==1.0.9
-matplotlib==3.6.3
+matplotlib==3.8.2
 newspaper3k==0.2.8
 nltk==3.7
-pandas==1.5.2
+pandas==2.2.2
+python-dotenv==1.0.1
 Requests==2.31.0
 scikit_learn==1.3.1
-seaborn==0.13.1
-torch==2.1.0
-tqdm==4.64.1
-transformers==4.35.0
+seaborn==0.13.2
+torch==2.2.0
+tqdm==4.66.2
+transformers==4.39.1
+wandb==0.13.11
