added local model files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ annomatic-dataset/*.csv
 annomatic-dataset/data/annotation/*
 annomatic-sentence-pool/data/raw/adfontes_snapshot.parquet
 annomatic-sentence-pool/data/raw/all_sides_snapshot_15_11_2023.html
+models_local/*
 # Distribution / packaging
 .Python
 build/
